--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -1,10 +1,10 @@
 {
     "explore": "Odkrywaj",
-    "explore-desc": "Znajdź nowe serwery, emotki i więcej!",
+    "explore-desc": "Znajdź nowe serwery, Emotki i więcej!",
     "servers": "Serwery",
-    "join-server": "Dołącz do Serwera",
+    "join-server": "Dołącz do serwera",
     "themes": "Motywy",
-    "emoji-packs": "Paczki emotek",
+    "emoji-packs": "Paczki Emotek",
     "message-styles": "Wygląd Wiadomości",
     "created-by": "Stworzone przez",
     "filter": "Filtry",
@@ -15,25 +15,25 @@
     "most-users": "Najwięcej Użytkowników",
     "least-users": "Najmniej Użytkowników",
     "alphabetical": "Alfabetycznie",
-    "date-added": "Data dodania",
+    "date-added": "Data Dodania",
 
-    "explore-support-message": "Wesprzyj Nertivię przez dotacje dowolnej ilości pieniędzy. Otrzymasz odznakę wspierającego oraz więcej funkcji w przyszłości.",
-    "support-message-settings": "Wesprzyj Nertivię. Otrzymasz za to odznakę.",
+    "explore-support-message": "Wesprzyj Nertivię przez dotacje dowolnej kwoty. Otrzymasz odznakę wspierającego oraz więcej funkcji w przyszłości.",
+    "support-message-settings": "Wesprzyj Nertivię i otrzymaj odznakę.",
     "donate": "Wesprzyj",
 
     "join": "Dołącz",
-    "join-card-message": "Dołącz do oficjalnego serwera Nertivii",
+    "join-card-message": "Dołącz do oficjalnego serwera Nertivii.",
     "coming-soon!": "Wkrótce!",
 
     "joined": "Dołączono",
     "apply": "Aplikuj",
-    "unapply": "Odaplikuj",
+    "unapply": "Zrezygnuj",
     "copy-link": "Skopiuj link",
 
     "clone": "Sklonuj",
     "cloning": "Klonowanie...",
     "cloned": "Klonowanie zakończone",
-    "theme-safe-message": "Te motywy są bezpieczne i zweryfikowane przez naszych moderatorów.",
+    "theme-safe-message": "Motywy na liście są bezpieczne i zweryfikowane przez naszych moderatorów.",
 
     "friends": "Znajomi",
     "pending": "Oczekujący",
@@ -42,17 +42,17 @@
     "online": "Aktywny",
     "away": "Zaraz wracam",
     "busy": "Zajęty",
-    "looking-to-play": "Szkuam graczy",
+    "looking-to-play": "Szkuam do gry",
     "offline": "Niedostępny",
 
     "add-friends-message": "Dodaj znajomych",
-    "offline-message": "Wszyscy twoi znajomi są niedostępni.",
-    "saved-notes": "Zachowane notatki",
-    "select-person-message": "Wybierz osobę do pisania",
+    "offline-message": "Wszyscy Twoi znajomi są niedostępni.",
+    "saved-notes": "Twoje Notatki",
+    "select-person-message": "Wybierz osobę, z którą chcesz pisać.",
     "message": "Wiadomość",
 
-    "add-server": "Dodaj serwer",
-    "add-friend": "Dodaj znajomego",
+    "add-server": "Dodaj Serwer",
+    "add-friend": "Dodaj Znajomego",
     "add-friend-message": "Dodaj znajomych używając ich nazwy użytkownika i tagu.",
     "adding": "Dodawanie...",
     "create": "Stwórz",
