--- a/src/lang/sv.json
+++ b/src/lang/sv.json
@@ -50,7 +50,7 @@
     "offline-message": "Alla dina vänner är offline.",
     "saved-notes": "Sparade anteckningar",
     "select-person-message": "Välj en person att meddela!",
-    "message": "Meddela",
+    "message": "Meddelande",
 
     "add-server": "Lägg till server",
     "add-friend": "Lägg till vän",
