--- a/src/lang/tr.json
+++ b/src/lang/tr.json
@@ -42,7 +42,7 @@
     "online": "Online",
     "away": "Dışarıda",
     "busy": "Meşgül",
-    "looking-to-play": "Oynamak istiyor",
+    "looking-to-play": "Kimseynen oynamak istiyor",
     "offline": "Çevrim Dışı",
 
     "add-friends-message": "Arkadaş ekle.",
@@ -63,5 +63,5 @@
     "yesterday-at": "Dün saat {0}",
     "send-a-message": "Bir mesaj gönder",
 
-    "Translated-By": "Translated by Cossack:1738"
+    "Translated-By": "Translated by Cossack:1738 and Improved Some Words by JustGoodGame:Lolz"
 }
