--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -1,11 +1,13 @@
 {
     "explore": "Odkrywaj",
     "explore-desc": "Znajdź nowe serwery, Emotki i więcej!",
+    "Poland": "Polska",
     "servers": "Serwery",
     "join-server": "Dołącz do serwera",
     "themes": "Motywy",
     "emoji-packs": "Paczki Emotek",
     "message-styles": "Wygląd Wiadomości",
+    "direct-message": "Prywatna Wiadomość",
     "created-by": "Stworzone przez",
     "filter": "Filtry",
     "sort-by": "Sortuj",
@@ -42,14 +44,34 @@
     "online": "Aktywny",
     "away": "Zaraz wracam",
     "busy": "Zajęty",
-    "looking-to-play": "Szkuam do gry",
+    "looking-to-play": "Szukam do gry",
     "offline": "Niedostępny",
+
+    "changelog": "Zmiany",
+    "settings": "Ustawienia",
+    "options": "Opcje",
+    "my-profile": "Mój Profil",
+    "edit-profile": "Edytuj Profil",
+    "username": "Nazwa",
+    "name": "Imię",
+    "current-password": "Aktualne Hasło",
+    "reset-password": "Zresetuj Hasło",
+    "survey": "Opis",
 
     "add-friends-message": "Dodaj znajomych",
     "offline-message": "Wszyscy Twoi znajomi są niedostępni.",
     "saved-notes": "Twoje Notatki",
     "select-person-message": "Wybierz osobę, z którą chcesz pisać.",
     "message": "Wiadomość",
+
+    "gender": "Płeć",
+    "age": "Wiek",
+    "continent": "Kontynent",
+    "country": "Kraj",
+    "joined": "Dołączył",
+    "male": "Chłopak",
+    "female": "Dziewczyna",
+    "rather-no-say": "Nie chcę mówić",
 
     "add-server": "Dodaj Serwer",
     "add-friend": "Dodaj Znajomego",
